--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,9 @@
             android:id="@+id/action_fragmentGallery_to_imageDetailsFragment"
             app:destination="@id/imageDetailsFragment"
             app:enterAnim="@anim/card_flip_left_in"
-            app:exitAnim="@anim/card_flip_left_out" />
+            app:exitAnim="@anim/card_flip_left_out"
+            app:popEnterAnim="@anim/move_from_left"
+            app:popExitAnim="@anim/move_to_right" />
     </fragment>
     <fragment
         android:id="@+id/imageDetailsFragment"
