--- a/app/src/main/res/layout/loading_state_layout.xml
+++ b/app/src/main/res/layout/loading_state_layout.xml
@@ -20,7 +20,7 @@
         android:id="@+id/retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry"
+        android:text="@string/retry_loading"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
