--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -34,23 +34,13 @@
         android:id="@+id/retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry"
+        android:text="@string/retry_loading"
         android:visibility="gone"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        app:icon="@drawable/ic_baseline_refresh_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/list_recycler_view"
         tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/no_results_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No result found, please retry"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/list_recycler_view" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
